--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ margin-left: 80px;
     font-weight: 600;
 }
 
-.main_image a {
+.carousel-caption a {
     color: rgb(24, 206, 24);
     text-decoration: none;
     font-size: 16px;
